# LearnOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README  README.md  vcpkg.json
LearnOpenGL/: CMakeLists.txt
LearnOpenGL/include/: callbacks.h  file.h  gl_error.h  platfrom.h  shader_program.h  shader_util.h
LearnOpenGL/res/shaders/: basic.frag  basic.frag.glsl  basic.vert  basic.vert.glsl  yellow.frag.glsl
LearnOpenGL/src/: callbacks.cxx  file.cxx  main.cxx  shader_program.cxx  shader_util.cxx
