cmake_minimum_required(VERSION 3.2)
project(LearnOpenGL)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory("LearnOpenGL")

# add_subdirectory("vendor/glad")
# add_subdirectory("vendor/fmt")
# add_subdirectory("vendor/glfw")
# add_subdirectory("vendor/spdlog")
